--- a/dapi/test/fixtures/campaigns.yml
+++ b/dapi/test/fixtures/campaigns.yml
@@ -127,8 +127,8 @@ yomei_shu:
   status: 1
   platform: mixi
   point: 13
-  opening_at: 2012-1-1 0:0:0
-  closing_at: 2100-1-1 0:0:0
+  opening_at: 
+  closing_at: 
   movie: /images/media/yomeishu.mov
   thumbnail: /images/poster-sp.jpg
   second_picture: /images/creative-sp.jpg
