--- a/spec/fixtures/enq_pages.yml
+++ b/spec/fixtures/enq_pages.yml
@@ -37,6 +37,27 @@ sc_SP_page4_2:
   next_page_id: 
   wait_until: 1
   
+sc_SP_page1_first:
+  uuid: EnqSPSuccessConfirmPage1First
+  enq_face_id: EnqSPSuccessConfirmFirst
+  description: アンケ1SPページ1First
+  next_page_id: EnqSPSuccessConfirmPage2-1First
+  wait_until: 1
+
+sc_SP_page2_1_first:
+  uuid: EnqSPSuccessConfirmPage2-1First
+  enq_face_id: EnqSPSuccessConfirmFirst
+  description: アンケ1SPページ2-1First
+  next_page_id: 
+  wait_until: 1
+
+sc_SP_page2_2_first:
+  uuid: EnqSPSuccessConfirmPage2-2First
+  enq_face_id: EnqSPSuccessConfirmFirst
+  description: アンケ1SPページ2-2First
+  next_page_id: 
+  wait_until: 1
+
 # PC用の動作確認データ
 sc_PC_page1:
   uuid: EnqPCSuccessConfirmPage1
@@ -66,6 +87,27 @@ sc_PC_page3_2:
   next_page_id: 
   wait_until: 1
 
+sc_PC_page1_first:
+  uuid: EnqPCSuccessConfirmPage1First
+  enq_face_id: EnqPCSuccessConfirmFirst
+  description: アンケ1PCページ1First
+  next_page_id: EnqPCSuccessConfirmPage2-1First
+  wait_until: 1
+
+sc_PC_page2_1_first:
+  uuid: EnqPCSuccessConfirmPage2-1First
+  enq_face_id: EnqPCSuccessConfirmFirst
+  description: アンケ1PCページ2-1First
+  next_page_id: 
+  wait_until: 1
+
+sc_PC_page2_2_first:
+  uuid: EnqPCSuccessConfirmPage2-2First
+  enq_face_id: EnqPCSuccessConfirmFirst
+  description: アンケ1PCページ2-2First
+  next_page_id: 
+  wait_until: 1
+
 # スマートフォン用のnil動作確認データ
 nullable_SP_page1:
   uuid: EnqPageSPNullablePage1
@@ -79,6 +121,27 @@ nullable_SP_page2_1:
 nullable_SP_page2_2:
   uuid: EnqPageSPNullablePage2-2
   enq_face_id: EnqSPNullable
+
+nullable_SP_first_1_page1:
+  uuid: EnqPageSPNullableFirst1Page1
+  enq_face_id: EnqSPNullableFirst1
+  next_page_id: EnqPageSPNullablePage2-1
+
+nullable_SP_first_1_page2_1:
+  uuid: EnqPageSPNullableFirst1Page2-1
+  enq_face_id: EnqSPNullableFirst1
+
+nullable_SP_first_1_page2_2:
+  uuid: EnqPageSPNullableFirst1Page2-2
+  enq_face_id: EnqSPNullable
+
+nullable_SP_first_2_page:
+  uuid: EnqPageSPNullableFirst2Page
+  enq_face_id: EnqSPNullableFirst2
+
+nullable_SP_first_3_page:
+  uuid: EnqPageSPNullableFirst3Page
+  enq_face_id: EnqSPNullableFirst3
 
 # PC用のnil動作確認データ
 nullable_PC_page1:
@@ -94,6 +157,27 @@ nullable_PC_page2_2:
   uuid: EnqPagePCNullablePage2-2
   enq_face_id: EnqPCNullable
   
+nullable_PC_first_1_page1:
+  uuid: EnqPagePCNullableFirst1Page1
+  enq_face_id: EnqPCNullableFirst1
+  next_page_id: EnqPagePCNullablePage2-1
+
+nullable_PC_first_1_page2_1:
+  uuid: EnqPagePCNullableFirst1Page2-1
+  enq_face_id: EnqPCNullableFirst1
+
+nullable_PC_first_1_page2_2:
+  uuid: EnqPagePCNullableFirst1Page2-2
+  enq_face_id: EnqPCNullable
+
+nullable_PC_first_2_page:
+  uuid: EnqPagePCNullableFirst2Page
+  enq_face_id: EnqPCNullableFirst2
+
+nullable_PC_first_3_page:
+  uuid: EnqPagePCNullableFirst3Page
+  enq_face_id: EnqPCNullableFirst3
+
 # 異常系の確認用データ
 # アンケートの最初のページがNull
 first_page_null_SP:
@@ -215,12 +299,6 @@ yomei_shu_sp_page10:
   uuid: YomeiShuSPEnqPage10
   enq_face_id: YomeiShuSPEnqFaceID
   description: 
-  next_page_id: YomeiShuSPEnqPage11
-  
-yomei_shu_sp_page11:
-  uuid: YomeiShuSPEnqPage11
-  enq_face_id: YomeiShuSPEnqFaceID
-  description: 
 
 yomei_shu_pc_page1:
   uuid: YomeiShuPCEnqPage1
@@ -280,14 +358,7 @@ yomei_shu_pc_page10:
   uuid: YomeiShuPCEnqPage10
   enq_face_id: YomeiShuPCEnqFaceID
   description: 
-  next_page_id: YomeiShuPCEnqPage11
-  
-yomei_shu_pc_page11:
-  uuid: YomeiShuPCEnqPage11
-  enq_face_id: YomeiShuPCEnqFaceID
-  description: 
 
-  
 # プラスワン
 plus_one_sp_page1:
   uuid: PlusOneSPEnqPage1
@@ -347,12 +418,6 @@ plus_one_sp_page10:
   uuid: PlusOneSPEnqPage10
   enq_face_id: PlusOneSPEnqFaceID
   description: 
-#  next_page_id: PlusOneSPEnqPage11
-#  
-#plus_one_sp_page11:
-#  uuid: PlusOneSPEnqPage11
-#  enq_face_id: PlusOneSPEnqFaceID
-#  description: 
 
 plus_one_pc_page1:
   uuid: PlusOnePCEnqPage1
@@ -412,9 +477,3 @@ plus_one_pc_page10:
   uuid: PlusOnePCEnqPage10
   enq_face_id: PlusOnePCEnqFaceID
   description: 
-#  next_page_id: PlusOnePCEnqPage11
-#  
-#plus_one_pc_page11:
-#  uuid: PlusOnePCEnqPage11
-#  enq_face_id: PlusOnePCEnqFaceID
-#  description: 
