--- a/spec/fixtures/enq_faces.yml
+++ b/spec/fixtures/enq_faces.yml
@@ -12,6 +12,16 @@ sc_SP:
   title: アンケート1SP
   description: アンケート1説明SP
 
+sc_SP_first:
+  uuid: EnqSPSuccessConfirmFirst
+  enq_id: EnqStatus1First
+  face: SP
+  first_page_id: EnqSPSuccessConfirmPage1First
+  wait_until: 30
+  css: /css/sp/themes/sample-1/style.css
+  title: アンケート1SP
+  description: アンケート1説明SP
+
 # PC用の動作確認データ
 sc_PC:
   uuid: EnqPCSuccessConfirm
@@ -23,10 +33,35 @@ sc_PC:
   title: アンケート1PC
   description: アンケート1説明PC
 
+sc_PC_first:
+  uuid: EnqPCSuccessConfirmFirst
+  enq_id: EnqStatus1First
+  face: PC
+  first_page_id: EnqPCSuccessConfirmPage1First
+  wait_until: 30
+  css: /css/pc/themes/sample-1/style.css
+  title: アンケート1PC
+  description: アンケート1説明PC
+
 # スマートフォン用のnil動作確認データ
 nullable_SP:
   uuid: EnqSPNullable
   enq_id: EnqNullable
+  face: SP
+  
+nullable_SP_first_1:
+  uuid: EnqSPNullableFirst1
+  enq_id: EnqNullableFirst1
+  face: SP
+  
+nullable_SP_first_2:
+  uuid: EnqSPNullableFirst2
+  enq_id: EnqNullableFirst2
+  face: SP
+  
+nullable_SP_first_3:
+  uuid: EnqSPNullableFirst3
+  enq_id: EnqNullableFirst3
   face: SP
   
 # PC用のnil動作確認データ
@@ -35,6 +70,21 @@ nullable_PC:
   enq_id: EnqNullable
   face: PC
 
+nullable_PC_first_1:
+  uuid: EnqPCNullableFirst1
+  enq_id: EnqNullableFirst1
+  face: PC
+  
+nullable_PC_first_2:
+  uuid: EnqPCNullableFirst2
+  enq_id: EnqNullableFirst2
+  face: PC
+  
+nullable_PC_first_3:
+  uuid: EnqPCNullableFirst3
+  enq_id: EnqNullableFirst3
+  face: PC
+  
 # 異常系の確認用データ
 # アンケートの最初のページがNull
 first_page_null_SP:
@@ -126,18 +176,16 @@ yomei_shu_SP:
   uuid: YomeiShuSPEnqFaceID
   enq_id: YomeiShuEnqID
   face: SP
-  first_page_id: YomeiShuEnqPage1
+  first_page_id: YomeiShuSPEnqPage1
   wait_until: 30
-  title: 動画キャンペーン
  
 yomei_shu_PC:
   uuid: YomeiShuPCEnqFaceID
   enq_id: YomeiShuEnqID
   face: PC
-  first_page_id: YomeiShuEnqPage1
+  first_page_id: YomeiShuPCEnqPage1
   wait_until: 30
-  title: 動画キャンペーン
- 
+
 # プラスワン
 plus_one_SP:
   uuid: PlusOneSPEnqFaceID
