--- a/spec/fixtures/enqs.yml
+++ b/spec/fixtures/enqs.yml
@@ -6,6 +6,10 @@ status1:
   uuid: EnqStatus1
   status: 1
 
+status1_first:
+  uuid: EnqStatus1First
+  status: 1
+
 # アンケートを作成中
 status0:
   uuid: EnqStatus0
@@ -19,6 +23,18 @@ status9:
 # nil動作確認用
 nullable:
   uuid: EnqNullable
+  status: 1
+
+nullable_first_1:
+  uuid: EnqNullableFirst1
+  status: 1
+  
+nullable_first_2:
+  uuid: EnqNullableFirst2
+  status: 1
+
+nullable_first_3:
+  uuid: EnqNullableFirst3
   status: 1
 
 # 異常系の確認用データ
@@ -42,15 +58,13 @@ incons_question:
   uuid: InconsistencyQuestionEnqID
   status: 1
 
- 
+
 # 養命酒
 yomei_shu:
   uuid: YomeiShuEnqID
   status: 1
-  
+
 # プラスワン
 plus_one:
   uuid: PlusOneEnqID
   status: 1
-   
-  
