--- a/test/fixtures/branches.yml
+++ b/test/fixtures/branches.yml
@@ -2,14 +2,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 # スマートフォン用の動作確認データ
-scSPpage3to4-1:
+scSPpage3to4_1:
   uuid: SuccessConfirmSPPage3to4-1
   enq_question_id: SuccessConfirmSPQuestion3
   answer: 選択肢1
   next_page_id: EnqSPSuccessConfirmPage4-1
   wait_until: 1
 
-scSPpage3to4-2:
+scSPpage3to4_2:
   uuid: SuccessConfirmSPPage3to4-2
   enq_question_id: SuccessConfirmSPQuestion3
   answer: 選択肢2
@@ -17,14 +17,14 @@ scSPpage3to4-2:
   wait_until: 1
 
 # PC用の動作確認データ
-scPCpage2to3-1:
+scPCpage2to3_1:
   uuid: SuccessConfirmPCPage2to3-1
   enq_question_id: SuccessConfirmPCQuestion2
   answer: 選択肢1
   next_page_id: EnqPCSuccessConfirmPage3-1
   wait_until: 1
 
-scPCpage2to3-2:
+scPCpage2to3_2:
   uuid: SuccessConfirmPCPage2to3-2
   enq_question_id: SuccessConfirmPCQuestion2
   answer: 選択肢2
