--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -59,14 +59,14 @@ textarea:
 nullable_q1:
   uuid: NullableQuestion1
   kind: text
-  required: false
+  answer_content: nil要素確認用
  
-nullable_q2-1:
+nullable_q2_1:
   uuid: NullableQuestion2-1
   kind: text
   required: false
  
-nullable_q2-2:
+nullable_q2_2:
   uuid: NullableQuestion2-2
   kind: text
   required: false
@@ -82,67 +82,6 @@ incons_question:
   answer_content: 設問と選択肢が矛盾している
   answer_description: 設問と選択肢が矛盾している
 
-  
-# 養命酒
-yomei_shu_question1:
-  uuid: YomeiShuQuestion1
-  kind: radio
-  title: 性別をお答えください。
-  required: true
-
-yomei_shu_question2:
-  uuid: YomeiShuQuestion2
-  kind: numeric
-  title: 年齢をお答えください。
-  required: true
-
-yomei_shu_question3:
-  uuid: YomeiShuQuestion3
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」の香りに興味を持たれましたか？
-  required: true
-
-yomei_shu_question4:
-  uuid: YomeiShuQuestion4
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を飲んでみたいと思いましたか？
-  required: true
-
-yomei_shu_question5:
-  uuid: YomeiShuQuestion5
-  kind: select
-  title: このCMをご覧になって「ハーブの恵み」を買ってみたいと思いましたか？
-  required: true
-
-yomei_shu_question6:
-  uuid: YomeiShuQuestion6
-  kind: select
-  title: 「ハーブの恵み スパークリング」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question7:
-  uuid: YomeiShuQuestion7
-  kind: select
-  title: 「ハーブの恵み スパークリング」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question8:
-  uuid: YomeiShuQuestion8
-  kind: select
-  title: 「ハーブの恵み」を以前からご存知でしたか？
-  required: true
-
-yomei_shu_question9:
-  uuid: YomeiShuQuestion9
-  kind: select
-  title: 「ハーブの恵み」を飲んだことがありますか？
-  required: true
-
-yomei_shu_question10:
-  uuid: YomeiShuQuestion10
-  kind: select
-  title: 最後に今回の動画を再生したきっかけを教えてください。
-  required: true
 
 # 養命酒
 yomei_shu_question1:
@@ -153,7 +92,7 @@ yomei_shu_question1:
 
 yomei_shu_question2:
   uuid: YomeiShuQuestion2
-  kind: numeric
+  kind: select
   title: 年齢をお答えください。
   required: true
 
